Mejorar la carga de imágenes y la gestión de métricas GitHub
Se optimizó la carga de la foto de perfil con atributos modernos de rendimiento y se añadió preload para priorizar su carga. También se mejoró la sección de estadísticas con manejo de errores, estados de carga, sincronización horaria precisa y gestión de eventos de visibilidad y conexión.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://avatars.githubusercontent.com" />
+    <link rel="preload" as="image"
+          href="https://avatars.githubusercontent.com/Erickpe8?s=256"
+          imagesrcset="https://avatars.githubusercontent.com/Erickpe8?s=128 128w, https://avatars.githubusercontent.com/Erickpe8?s=256 256w, https://avatars.githubusercontent.com/Erickpe8?s=352 352w"
+          imagesizes="(min-width: 768px) 176px, 128px" />
 
     <!-- CSS opcional -->
     <link rel="stylesheet" href="./assets/styles.css" />
