Agrega estilos reutilizables, mejora la accesibilidad y optimiza el rendimiento de las imágenes.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Erick Pérez | Backend Developer</title>
+    <meta name="description" content="Portafolio de Erick Perez, desarrollador fullstack en formacion. Proyectos, habilidades y contacto." />
+    <meta name="theme-color" content="#43c5ef" />
+    <meta property="og:title" content="Erick Perez | Fullstack Developer" />
+    <meta property="og:description" content="Portafolio de Erick Perez con proyectos, habilidades y contacto." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://avatars.githubusercontent.com/Erickpe8?s=352" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Erick Perez | Fullstack Developer" />
+    <meta name="twitter:description" content="Portafolio de Erick Perez con proyectos, habilidades y contacto." />
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/Erickpe8?s=352" />
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -11,6 +21,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://avatars.githubusercontent.com" />
     <link rel="preload" as="image"
@@ -36,7 +47,7 @@
     <script defer src="./main.js"></script>
 
 </head>
-<body class="bg-gray-50 font-[Inter]">
+<body class="bg-gray-50 font-[Inter] is-loading">
 
     <navbar-component></navbar-component>
 
