Mejora la carga de Tailwind CSS con preconnect y defer.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta name="twitter:image" content="https://avatars.githubusercontent.com/Erickpe8?s=352" />
 
     <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://cdn.tailwindcss.com" />
+    <script defer src="https://cdn.tailwindcss.com"></script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
