Agregar favicon y metadatos de autor y robots al HTML.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Erick Pérez | Backend Developer</title>
     <meta name="description" content="Portafolio de Erick Perez, desarrollador fullstack en formacion. Proyectos, habilidades y contacto." />
     <meta name="theme-color" content="#43c5ef" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Erick Pérez" />
     <meta property="og:title" content="Erick Perez | Fullstack Developer" />
     <meta property="og:description" content="Portafolio de Erick Perez con proyectos, habilidades y contacto." />
     <meta property="og:type" content="website" />
@@ -32,6 +34,7 @@
 
     <!-- CSS opcional -->
     <link rel="stylesheet" href="./assets/styles.css" />
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
 
     <!-- Componentes -->
     <script type="module" src="./components/navbar.js"></script>
